--- a/web/views/candidato/cadastrar.phtml
+++ b/web/views/candidato/cadastrar.phtml
@@ -1,7 +1,7 @@
 <div class="mx-auto max-w-7xl border p-4 rounded-xl bg-white mt-10 mb-20">
     <?php echo FlashMessage::getMessage(); ?>
 
-    <form action="/candidato/processaCadastrar" method="post">
+    <form action="/candidato/salvar" method="post">
         <input type="hidden" name="status" id="status" value="1">
         <div class="flex space-x-2">
             <label class="form-control w-1/2">
