--- a/web/views/candidato/perfil.phtml
+++ b/web/views/candidato/perfil.phtml
@@ -1,7 +1,7 @@
 <!--<div class="container container-sm w-75">-->
 <div class="mx-auto max-w-7xl px-4 py-14">
     <div class="mx-auto max-w-7xl border p-4 rounded-xl bg-white">
-        <form method="post" action="/candidato/salvar">
+        <form method="post" action="/candidato/salvarPerfil">
             <div class="p-2 bg-slate-100 rounded-xl">
                 <h2 class="text-base font-semibold text-gray-900">Meu perfil</h2>
                 <p class="mt-1 text-sm text-gray-600">Informe aqui suas preferências para facilitar o encontro de vagas com o seu perfil.</p>
