--- a/web/views/empresa/cadastro.phtml
+++ b/web/views/empresa/cadastro.phtml
@@ -1,7 +1,7 @@
 <div class="mx-auto max-w-7xl border p-4 rounded-xl bg-white mt-10 mb-20">
     <?php echo FlashMessage::getMessage(); ?>
 
-    <form action="/empresa/processaCadastrar" method="post" enctype="multipart/form-data">
+    <form action="/empresa/cadastrar" method="post" enctype="multipart/form-data">
         <div class="grid grid-cols-[1fr_auto_1fr]">
             <div>
                 <div class="p-2 bg-slate-100 rounded-xl mb-5">
