--- a/web/views/vaga/filtros.phtml
+++ b/web/views/vaga/filtros.phtml
@@ -1,4 +1,4 @@
-<form method="post" action="/vaga/index#vagas" class="flex flex-col gap-4">
+<form method="post" action="/vaga/painel#vagas" class="flex flex-col gap-4">
     <div class="flex flex-col gap-0.5">
         <details class="collapse collapse-arrow border border-base-300 bg-neutral-content/50 ">
             <summary class="collapse-title font-medium">Habilidades <?= !empty($filtro_habilidades) ? '<div class="badge badge-sm badge-accent">' . count($filtro_habilidades) . '</div>' : '' ?></summary>
