--- a/web/views/beneficio/index.phtml
+++ b/web/views/beneficio/index.phtml
@@ -1,6 +1,46 @@
-<div class="overflow-x-auto flex justify-center w-full mb-20">
+<dialog id="modal" class="modal modal-lg" onclick="close_modal(event, 'modal')">
+    <div class="modal-box max-w-1xl" onclick="event.stopPropagation()">
+        <form method="post" action="/beneficio/salvar">
+            <input type="hidden" name="id" id="id" value="<?= isset($beneficio) ? $beneficio->getId() : '' ?>"/>
+            <div class="flex space-x-2">
+                <label class="form-control w-full">
+                    <div class="label">
+                        <span class="label-text">Benefício</span>
+                    </div>
+                    <input type="text" name="beneficio" id="beneficio" required value="<?= isset($beneficio) ? $beneficio->getNome() : '' ?>" class="input input-bordered w-full"/>
+                </label>
+            </div>
+            <div class="mt-6 flex items-center justify-between space-x-2">
+                <button class="btn btn-neutral" onclick="close_modal(event, 'modal')">Cancelar</button>
+                <button class="btn btn-success btn-wide" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                    </svg>
+
+                    Salvar
+                </button>
+            </div>
+        </form>
+    </div>
+</dialog>
+
+<div class="overflow-x-auto flex justify-center w-full mb-10 mt-5">
     <table class="border-collapse table-sm table-zebra border-collapse dark:border-slate-500 bg-white dark:bg-slate-800 text-sm shadow-sm w-2/5">
-        <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top p-4">Benefícios cadastrados no sistema</caption>
+        <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top">
+            <div class="flex">
+                <div class="w-full flex items-center justify-start">
+                    <h2 class="shadow">Benefícios</h2>
+                </div>
+                <div class="flex justify-end">
+                    <button class="btn btn-success btn-sm text-white" onclick="modal.showModal()" id="cadastrar">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                        </svg>
+                        Cadastrar
+                    </button>
+                </div>
+            </div>
+        </caption>
         <thead class="bg-slate-50 dark:bg-slate-700">
         <tr>
             <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200 whitespace-nowrap w-0">#</th>
@@ -18,8 +58,8 @@
         </thead>
         <tbody>
         <?php
-        /** @var array<Beneficio> $beneficio */
-        foreach ($beneficio as $valorBeneficio) :
+        /** @var array<Beneficio> $beneficios */
+        foreach ($beneficios as $valorBeneficio) :
             ?>
             <tr class="hover">
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400"><?= $valorBeneficio->getId() ?></td>
@@ -27,12 +67,12 @@
                 <?php if ($_SESSION['usuario']->getTipo() == TipoUsuarioEnum::ADMINISTRADOR->value) : ?>
                     <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400">
                         <div class="flex justify-center space-x-1">
-                            <a class="btn btn-xs h-8 w-8 border btn-square " href="/beneficio/editar?id=<?= $valorBeneficio->getId() ?>" title="Editar">
+                            <button class=" btn btn-xs h-8 w-8 border btn-square border-accent-content/15" name="editar" data-beneficioid="<?= $valorBeneficio->getId() ?>" title="Editar">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"/>
                                 </svg>
-                            </a>
-                            <a class="btn btn-xs h-8 w-8 border btn-square text-error " href="/beneficio/excluir?id=<?= $valorBeneficio->getId() ?>" title="Excluir">
+                            </button>
+                            <a class="btn btn-xs h-8 w-8 border btn-square border-accent-content/15 text-error " href="/beneficio/excluir?id=<?= $valorBeneficio->getId() ?>" title="Excluir">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"/>
                                 </svg>
@@ -45,3 +85,34 @@
         </tbody>
     </table>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        let botoes = document.querySelectorAll("button[name='editar']")
+
+        botoes.forEach(function (item) {
+            item.addEventListener('click', function () {
+                fetch('/beneficio/detalhes', {
+                    method: 'POST',
+                    headers: {
+                        'Content-type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        id: item.getAttribute('data-beneficioid')
+                    }),
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        document.getElementById('id').value = data.id
+                        document.getElementById("beneficio").value = data.nome
+                        modal.showModal()
+                    })
+            })
+        })
+
+        document.getElementById('cadastrar').addEventListener('click', function () {
+            document.getElementById('id').value = ""
+            document.getElementById("beneficio").value = ""
+        });
+    })
+</script>
