--- a/web/layouts/login/rodape.phtml
+++ b/web/layouts/login/rodape.phtml
@@ -29,7 +29,7 @@
             <h6 class="footer-title">Para Empresas</h6>
             <a class="link link-hover">Lista de Candidatos</a>
             <a class="link link-hover">Lista de Vagas</a>
-            <a class="link link-hover">Cadastro de Vagas</a>
+            <h6 class="footer-title">Sobre</h6>
             <a class="link link-hover">Relatórios</a>
         </nav>
         <nav>
