--- a/web/views/beneficio/index.phtml
+++ b/web/views/beneficio/index.phtml
@@ -25,7 +25,7 @@
 </dialog>
 
 <div class="overflow-x-auto flex justify-center w-full mb-10 mt-5">
-    <table class="border-collapse table-sm table-zebra border-collapse dark:border-slate-500 bg-white dark:bg-slate-800 text-sm shadow-sm w-2/5">
+    <table class="border-collapse table-sm table-zebra border-collapse dark:border-slate-500 bg-white dark:bg-slate-800 text-sm shadow-sm w-3/5">
         <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top">
             <div class="flex">
                 <div class="w-full flex items-center justify-start">
@@ -45,7 +45,7 @@
         <tr>
             <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200 whitespace-nowrap w-0">#</th>
             <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200 whitespace-nowrap w-auto">Benefício</th>
-            <?php if ($_SESSION['usuario']->getTipo() == TipoUsuarioEnum::ADMINISTRADOR->value) : ?>
+            <?php if (isset($_SESSION['administrador'])): ?>
                 <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200 whitespace-nowrap w-0">
                     <div class="flex justify-center items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
@@ -64,7 +64,7 @@
             <tr class="hover">
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400"><?= $valorBeneficio->getId() ?></td>
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400"><?= $valorBeneficio->getNome() ?></td>
-                <?php if ($_SESSION['usuario']->getTipo() == TipoUsuarioEnum::ADMINISTRADOR->value) : ?>
+                <?php if (isset($_SESSION['administrador'])): ?>
                     <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400">
                         <div class="flex justify-center space-x-1">
                             <button class=" btn btn-xs h-8 w-8 border btn-square border-accent-content/15" name="editar" data-beneficioid="<?= $valorBeneficio->getId() ?>" title="Editar">
