--- a/web/views/autenticacao/login.phtml
+++ b/web/views/autenticacao/login.phtml
@@ -3,6 +3,7 @@
         <?php echo FlashMessage::getMessage(); ?>
 
         <div role="tablist" class="tabs tabs-lifted">
+
             <input type="radio" name="tipoLogin" role="tab" class="tab" aria-label="Sou candidato" <?= empty($tab) || $tab != 2 ? 'checked' : '' ?> />
             <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
                 <form action="/candidato/login" method="post">
@@ -106,6 +107,42 @@
                     <a href="/empresa/cadastro" class="btn btn-neutral font-bold btn-block">Comece a divulgar agora mesmo!</a>
                 </div>
             </div>
+
+            <input type="radio" name="tipoLogin" role="tab" class="tab" aria-label="Administração" <?= !empty($tab) && $tab == 3 ? 'checked' : '' ?>/>
+            <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
+                <form action="/admin/login" method="post">
+                    <div class="mt-5">
+                        <label class="input input-bordered flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z"/>
+                            </svg>
+                            <input type="text" class="grow" name="login" id="login" placeholder="Informe seu login de acesso" required/>
+                        </label>
+                    </div>
+                    <div class="mt-5">
+                        <label class="input input-bordered flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                                <path fill-rule="evenodd" d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z" clip-rule="evenodd"/>
+                            </svg>
+                            <input type="password" class="grow" name="senha" id="senha" value="" placeholder="*****" required/>
+                        </label>
+                    </div>
+                    <div class="mt-5 flex justify-end items-center">
+                        <button id="icon-button_admin" class="btn btn-secondary btn-block" type="submit">
+                            <label class="swap swap-flip">
+                                <input type="checkbox" id="swap-icon-button_admin"/>
+                                <svg class="swap-off h-5 w-5 size-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"/>
+                                </svg>
+                                <svg class="swap-on h-5 w-5 size-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5V6.75a4.5 4.5 0 1 1 9 0v3.75M3.75 21.75h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H3.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"/>
+                                </svg>
+                            </label>
+                            Acessar
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
@@ -123,5 +160,11 @@
 
         button_empresa.addEventListener('mouseenter', () => swapIconButton_empresa.checked = true);
         button_empresa.addEventListener('mouseleave', () => swapIconButton_empresa.checked = false);
+
+        const button_admin = document.getElementById('icon-button_admin');
+        const swapIconButton_admin = document.getElementById('swap-icon-button_admin');
+
+        button_admin.addEventListener('mouseenter', () => swapIconButton_admin.checked = true);
+        button_admin.addEventListener('mouseleave', () => swapIconButton_admin.checked = false);
     });
 </script>
