--- a/web/layouts/login/rodape.phtml
+++ b/web/layouts/login/rodape.phtml
@@ -20,17 +20,25 @@
         </aside>
         <nav>
             <h6 class="footer-title">Para Candidatos</h6>
-            <a class="link link-hover">Dashboard</a>
-            <a class="link link-hover">Currículo</a>
-            <a class="link link-hover">Vagas em Destaque</a>
-            <a class="link link-hover">Vagas Urgentes</a>
+            <a class="">Perfil personalizado</a>
+            <a class="">Informações da empresa</a>
+            <a class="">Recomendações de vagas</a>
+            <a class="">Acompanhame suas vagas</a>
         </nav>
         <nav>
             <h6 class="footer-title">Para Empresas</h6>
-            <a class="link link-hover">Lista de Candidatos</a>
-            <a class="link link-hover">Lista de Vagas</a>
+            <a class="">Gestão de processos </a>
+            <a class="">Controle de vagas</a>
+            <a class="">Multiusuários</a>
+            <a class="">Relatórios</a>
+        </nav>
+        <nav>
             <h6 class="footer-title">Sobre</h6>
-            <a class="link link-hover">Relatórios</a>
+            <a href="/institucional/sobre" class="">Quem somos</a>
+            <h6 class="footer-title mt-3">Apoio</h6>
+            <div class="grid grid-flow-col gap-4">
+                <img src="/assets/images/logo_mais1.png" class="w-[100px]"/>
+            </div>
         </nav>
         <nav>
             <h6 class="footer-title">Social</h6>
@@ -50,10 +58,6 @@
                         <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
                     </svg>
                 </a>
-            </div>
-            <h6 class="footer-title mt-3">Apoio</h6>
-            <div class="grid grid-flow-col gap-4">
-                <img src="/assets/images/logo_mais1.png" class="w-[100px]"/>
             </div>
         </nav>
     </div>
