--- a/web/views/habilidade/index.phtml
+++ b/web/views/habilidade/index.phtml
@@ -25,7 +25,7 @@
                     <div class="label">
                         <span class="label-text">Nova categoria</span>
                     </div>
-                    <input type="text" name="categoriaNova" id="categoriaNova" required value="" class="input input-bordered w-full"/>
+                    <input type="text" name="categoriaNova" id="categoriaNova" value="" class="input input-bordered w-full"/>
                 </label>
             </div>
             <div class="flex space-x-2">
