--- a/web/layouts/sistema-externo/rodape.phtml
+++ b/web/layouts/sistema-externo/rodape.phtml
@@ -20,21 +20,21 @@
         </aside>
         <nav>
             <h6 class="footer-title">Para Candidatos</h6>
-            <a class="link link-hover">Dashboard</a>
-            <a class="link link-hover">Currículo</a>
-            <a class="link link-hover">Vagas em Destaque</a>
-            <a class="link link-hover">Vagas Urgentes</a>
+            <a class="">Perfil personalizado</a>
+            <a class="">Informações da empresa</a>
+            <a class="">Recomendações de vagas</a>
+            <a class="">Acompanhame suas vagas</a>
         </nav>
         <nav>
             <h6 class="footer-title">Para Empresas</h6>
-            <a class="link link-hover">Lista de Candidatos</a>
-            <a class="link link-hover">Lista de Vagas</a>
-            <a class="link link-hover">Cadastro de Vagas</a>
-            <a class="link link-hover">Relatórios</a>
+            <a class="">Gestão de processos </a>
+            <a class="">Controle de vagas</a>
+            <a class="">Multiusuários</a>
+            <a class="">Relatórios</a>
         </nav>
         <nav>
             <h6 class="footer-title">Sobre</h6>
-            <a href="/institucional/sobre" class="link link-hover">Quem somos</a>
+            <a href="/institucional/sobre" class="">Quem somos</a>
             <h6 class="footer-title mt-3">Apoio</h6>
             <div class="grid grid-flow-col gap-4">
                 <img src="/assets/images/logo_mais1.png" class="w-[100px]"/>
